--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>com.am.innovations</groupId>
 	<artifactId>commons</artifactId>
 	<version>1.0-SNAPSHOT</version>
-
+	<packaging>jar</packaging>
 	<name>Commons</name>
 
 
@@ -46,21 +46,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		
-		
+
+
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
